deployment.yaml
#
# This will create a deployment of the fake-server app
# that will live on https://fake-server.loadtest.identitysandbox.gov.
# The loadtest.identitysandbox.gov dns zone needs to be created
# and delegated from identitysandbox.gov in the account this is going
# to be created in, and an SSL cert for fake-server.loadtest.identitysandbox.gov
# needs to be created and have it's magic auth stuff put in the loadtest
# subdomain.  I did this by hand, but the rest happens automagically,
# as the fake-server hostname will be created by the external-dns
# service in the cluster, and the cert will be autodiscovered by the
# aws-load-balancer-controller.
# Logs should be going into cloudwatch.
#

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-server
  labels:
    app: fake-server
spec:
  selector:
    matchLabels:
      app: fake-server
  template:
    metadata:
      labels:
        app: fake-server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "5555"
    spec:
      containers:
        - name: fake-server
          image: 894947205914.dkr.ecr.us-west-2.amazonaws.com/logindotgov/identity-fake-server:1.2.1
          resources:
            requests:
              cpu: "75m"
              memory: "256Mi"
            limits:
              cpu: "80m"
              memory: "512Mi"
          ports:
            - containerPort: 5555
      tolerations:
        - key: "spot"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"

---
apiVersion: v1
kind: Service
metadata:
  name: fake-server
spec:
  ports:
    - port: 5555
      targetPort: 5555
      protocol: TCP
  type: NodePort
  selector:
    app: fake-server

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake-server
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    external-dns.alpha.kubernetes.io/hostname: fake-server.loadtest.identitysandbox.gov
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - fake-server.loadtest.identitysandbox.gov
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake-server
                port:
                  number: 5555
